--- a/common/src/main/resources/assets/overclocked_watches/lang/en_us.json
+++ b/common/src/main/resources/assets/overclocked_watches/lang/en_us.json
@@ -6,5 +6,7 @@
   "item.overclocked_watches.netherite_watch": "Netherite Watch",
 
   "key.category.overclocked_watches.day_night":  "Overclocked Watches",
-  "key.overclocked_watches.day_night": "Toggle Day/Night"
+  "key.overclocked_watches.day_night": "Toggle Day/Night",
+
+  "magic.overclocked_watches.charge_consumed": "Overclocked Watch Charge Consumed!"
 }
